Fixed search bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,11 @@ header {
 
 .quick-search-controls input[type="text"] {
     padding: 10px 16px;
+    justify-content: center;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 25px;
+    margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
     max-width: 400px;
